--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.3.0",
+    "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.10.3",
+    "radix-vue": "^1.4.9",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35"
   }
 }
