--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "autoprefixer": "^10.4.18",
+    "eslint": "8.52.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-nuxt": "4.0.0",
+    "eslint-plugin-prettier": "5.0.1",
     "postcss": "^8.4.35"
   }
 }
